--- a/stage1_config.yaml
+++ b/stage1_config.yaml
@@ -17,29 +17,35 @@ MODEL:
     # Single class: myotube
     NUM_CLASSES: 1
   
-  # Optimize for dense overlapping structures
+  # Optimize for dense overlapping myotube structures
   MASK_FORMER:
+    # Enhanced loss weights for overlapping structures
+    DEEP_SUPERVISION: True
+    CLASS_WEIGHT: 2.0    # Higher class weight for better myotube vs background
+    MASK_WEIGHT: 25.0    # Higher mask weight for precise myotube boundaries
+    DICE_WEIGHT: 2.0     # Dice loss for overlapping structures
+    
     TEST:
-      OBJECT_MASK_THRESHOLD: 0.3  # Lower threshold for thin structures
-      OVERLAP_THRESHOLD: 0.0  # Zero overlap - each myotube is completely distinct
+      OBJECT_MASK_THRESHOLD: 0.25  # Lower threshold for thin/dim myotubes
+
 
 # Dataset configuration for Stage 1 (algorithmic annotations)
 DATASETS:
   TRAIN: ("myotube_stage1_train",)
   TEST: ("myotube_stage1_val",)
 
-# Stage 1 Solver: Conservative settings for algorithmic annotations
+# Stage 1 Solver: Optimized for 4x training data (360 crops from 90 images)
 SOLVER:
   IMS_PER_BATCH: 1  # Single image batch for A40 GPU memory constraints
-  BASE_LR: 0.00003  # Slightly increased LR for more efficient training
-  MAX_ITER: 5000    # Optimized for ~100 images with batch size 1
-  STEPS: (3500, 4500)  # LR drops at 70% and 90%
+  BASE_LR: 0.00002  # Stable LR for extended training with 4x data
+  MAX_ITER: 18000   # 4x increase: 360 crops × 50 epochs = 18,000 iterations
+  STEPS: (12600, 16200)  # LR drops at 70% and 90% of 18,000 iterations
   WARMUP_FACTOR: 1.0
-  WARMUP_ITERS: 150   # Longer warmup for single-image training
+  WARMUP_ITERS: 500   # Extended warmup for longer training
   WEIGHT_DECAY: 0.05
   OPTIMIZER: "ADAMW"
   BACKBONE_MULTIPLIER: 0.1  # Keep backbone learning conservative
-  CHECKPOINT_PERIOD: 500  # Save checkpoint every evaluation for best model selection
+  CHECKPOINT_PERIOD: 1000  # Less frequent checkpoints for longer training
   CLIP_GRADIENTS:
     ENABLED: True
     CLIP_TYPE: "full_model"
@@ -56,21 +62,21 @@ INPUT:
   FORMAT: "RGB"
   DATASET_MAPPER_NAME: "coco_instance_lsj"
   
-  # Conservative augmentations for algorithmic annotations
+  # OPTIMIZED: Larger crops for better myotube connectivity context
   CROP:
     ENABLED: True
     TYPE: "relative_range" 
-    SIZE: [0.15, 0.25]  # Very minimal cropping to preserve full myotube lengths
+    SIZE: [0.2, 0.3]  # Larger crops to capture full myotube structures and overlaps
   
-  # Minimal color augmentation (algorithms may be sensitive to color changes)
-  COLOR_AUG_SSD: False
+  # Enhanced augmentations for dense overlapping myotubes
+  COLOR_AUG_SSD: True  # Helps with varying fluorescence intensity
   
   # Horizontal and vertical flip (myotubes oriented in all directions)
   RANDOM_FLIP: "horizontal"
 
-# Evaluation configuration
+# Evaluation configuration  
 TEST:
-  EVAL_PERIOD: 500  # Evaluate every 50 epochs (5000 iter ÷ 100 images = 50 epochs)
+  EVAL_PERIOD: 1800  # Evaluate every 50 epochs (18000 iter ÷ 360 crops = 50 epochs)
 
 # Data loader configuration
 DATALOADER:
