--- a/stage1_config.yaml
+++ b/stage1_config.yaml
@@ -37,9 +37,9 @@ DATASETS:
 
 # Stage 1 Solver: Optimized for Swin-Large with 4x training data (360 crops from 90 images)
 SOLVER:
-  IMS_PER_BATCH: 2  # A40 48GB can handle 2 images with Swin-Large
-  BASE_LR: 0.00002  # Optimized LR for batch size 2
-  MAX_ITER: 9000    # 360 crops × 25 epochs = 9,000 iterations
+  IMS_PER_BATCH: 1  # Swin-Large is memory hungry - stick to batch size 1
+  BASE_LR: 0.00001  # Reduced LR for smaller batch size
+  MAX_ITER: 18000   # 360 crops × 50 epochs = 18,000 iterations (back to original with batch size 1)
   # STEPS: (12600, 16200)  # Not needed for cosine LR schedule
   WARMUP_FACTOR: 1.0
   WARMUP_ITERS: 1000   # Longer warmup for large model
@@ -55,6 +55,8 @@ SOLVER:
     NORM_TYPE: 2.0
   AMP:
     ENABLED: True
+  # Memory optimization for Swin-Large
+  FIND_UNUSED_PARAMETERS: False
 
 # Input configuration optimized for algorithmic annotations
 INPUT:
@@ -77,12 +79,12 @@ INPUT:
 
 # Evaluation configuration  
 TEST:
-  EVAL_PERIOD: 900  # Evaluate every 25 epochs (9000 iter ÷ 360 crops = 25 epochs)
+  EVAL_PERIOD: 1800  # Evaluate every 50 epochs (18000 iter ÷ 360 crops = 50 epochs)
 
-# Data loader configuration - optimized for 52 CPUs + 1TB RAM
+# Data loader configuration - memory-optimized for Swin-Large
 DATALOADER:
   FILTER_EMPTY_ANNOTATIONS: True
-  NUM_WORKERS: 16          # Utilize more CPUs for faster data loading
+  NUM_WORKERS: 8          # Reduced workers to avoid memory pressure with large model
 
 # Output directory for Stage 1
 OUTPUT_DIR: "./output_stage1_algorithmic"
