--- a/fiji_integration/requirements.txt
+++ b/fiji_integration/requirements.txt
@@ -1,10 +1,11 @@
 # Myotube Segmentation - Fiji Integration Requirements
 # Install with: pip install -r requirements.txt
 
-# Core dependencies
+# Core dependencies - install in this specific order
+# torch and torchvision must be installed before detectron2
 torch>=1.10.0
 torchvision>=0.11.0
-detectron2 @ git+https://github.com/facebookresearch/detectron2.git
+# detectron2 requires torch, so it's installed separately after torch
 
 # Image processing
 opencv-python>=4.5.0
