--- a/fiji_integration/requirements.txt
+++ b/fiji_integration/requirements.txt
@@ -10,7 +10,7 @@ torchvision>=0.11.0
 # Image processing
 opencv-python>=4.5.0
 numpy>=1.19.0
-Pillow>=8.0.0
+Pillow==9.4.0
 scikit-image>=0.18.0
 
 # Data handling
