--- a/fiji_integration/requirements.txt
+++ b/fiji_integration/requirements.txt
@@ -1,9 +1,8 @@
 # Myotube Segmentation - Fiji Integration Requirements
 # Install with: pip install -r requirements.txt
 
-# Core dependencies - install in this specific order
-# torch and torchvision must be installed before detectron2
--i https://download.pytorch.org/whl/cu130
+# Core dependencies - CPU-only versions
+--index-url https://download.pytorch.org/whl/cpu
 torch>=1.10.0
 torchvision>=0.11.0
 # detectron2 requires torch, so it's installed separately after torch
