--- a/fiji_integration/requirements.txt
+++ b/fiji_integration/requirements.txt
@@ -2,7 +2,7 @@
 # Install with: pip install -r requirements.txt
 
 # Core dependencies - CPU-only versions
---index-url https://download.pytorch.org/whl/cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
 torch>=1.10.0
 torchvision>=0.11.0
 # detectron2 requires torch, so it's installed separately after torch
