--- a/fiji_integration/requirements.txt
+++ b/fiji_integration/requirements.txt
@@ -3,9 +3,9 @@
 
 # Core dependencies - CPU-only versions
 --extra-index-url https://download.pytorch.org/whl/cpu
-torch>=1.10.0
-torchvision>=0.11.0
-# detectron2 requires torch, so it's installed separately after torch
+torch==1.10.2+cpu
+torchvision==0.11.3+cpu
+torchaudio==0.10.2+cpu
 
 # Model dependencies
 timm>=0.4.12  # PyTorch Image Models - required for Mask2Former
