--- a/fiji_integration/requirements.txt
+++ b/fiji_integration/requirements.txt
@@ -33,5 +33,8 @@ pyyaml>=5.3
 matplotlib>=3.3.0
 pycocotools>=2.0.0
 
+# Parallel processing
+joblib>=1.0.0
+
 # Optional: For faster inference
 # ninja  # Uncomment if you want faster CUDA kernel compilation
